--- a/codeweb.html
+++ b/codeweb.html
@@ -94,5 +94,5 @@
 
     <h2> Ảnh </h2>
     <hr>
-    <img src="anh/anha.jpg" alt="Mô tả ảnh" style="max-width: 100%; height: auto;">
+    <img src="../../th.jpg" alt="Mô tả ảnh" style="max-width: 100%; height: auto;">
 </body>
