--- a/shop.html
+++ b/shop.html
@@ -46,5 +46,10 @@
       </tbody>
    </table>
    <p>Nguyen Tuan Anh rat dep zai okokkok</p>
+   <p>
+      Nguyen Tuan Anh rat la dep trai
+      Uoc mo la mot coder gioi 
+      Sang nhat ban
+   </p>
 </body>
 </html>
