--- a/shop.html
+++ b/shop.html
@@ -51,5 +51,9 @@
       Uoc mo la mot coder gioi 
       Sang nhat ban
    </p>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et 
+      voluptas reiciendis totam, ipsum libero qui fugiat commodi vitae magni nostrum dignissimos porro velit cum assumenda nobis
+      doloribus vero odit tenetur.</p>
+      <p>Lời khen cho thùy anh xinh</p>
 </body>
 </html>
